; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/sqlite3/extr_sqlite3.c_havingToWhere.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/sqlite3/extr_sqlite3.c_havingToWhere.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.HavingToWhereCtx = type { i32*, i32** }
%struct.TYPE_6__ = type { %struct.TYPE_5__, i32, i32* }
%struct.TYPE_5__ = type { %struct.HavingToWhereCtx* }

@havingToWhereExprCb = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32*, i32**)* @havingToWhere to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @havingToWhere(i32* %0, i32* %1, i32* %2, i32** %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32**, align 8
  %9 = alloca %struct.HavingToWhereCtx, align 8
  %10 = alloca %struct.TYPE_6__, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  store i32** %3, i32*** %8, align 8
  %11 = load i32**, i32*** %8, align 8
  %12 = getelementptr inbounds %struct.HavingToWhereCtx, %struct.HavingToWhereCtx* %9, i32 0, i32 1
  store i32** %11, i32*** %12, align 8
  %13 = load i32*, i32** %6, align 8
  %14 = getelementptr inbounds %struct.HavingToWhereCtx, %struct.HavingToWhereCtx* %9, i32 0, i32 0
  store i32* %13, i32** %14, align 8
  %15 = call i32 @memset(%struct.TYPE_6__* %10, i32 0, i32 24)
  %16 = load i32*, i32** %5, align 8
  %17 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %10, i32 0, i32 2
  store i32* %16, i32** %17, align 8
  %18 = load i32, i32* @havingToWhereExprCb, align 4
  %19 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %10, i32 0, i32 1
  store i32 %18, i32* %19, align 8
  %20 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %10, i32 0, i32 0
  %21 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %20, i32 0, i32 0
  store %struct.HavingToWhereCtx* %9, %struct.HavingToWhereCtx** %21, align 8
  %22 = load i32*, i32** %7, align 8
  %23 = call i32 @sqlite3WalkExpr(%struct.TYPE_6__* %10, i32* %22)
  ret void
}

declare dso_local i32 @memset(%struct.TYPE_6__*, i32, i32) #1

declare dso_local i32 @sqlite3WalkExpr(%struct.TYPE_6__*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
